Refactoring: Enable muted autoplay for audio widget

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     aria-label="Volume">
             </div>
         </div>
-        <audio id="bg-music" autoplay>
+        <audio id="bg-music" autoplay muted>
             <source src="core/website/global/audio/villa_kunterbunt_background_melody.mp3" type="audio/mpeg">
         </audio>
     </header>
