Feature: Enable audio loop for continuous playback

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     aria-label="Volume">
             </div>
         </div>
-        <audio id="bg-music" autoplay muted>
+        <audio id="bg-music" autoplay muted loop>
             <source src="core/website/global/audio/villa_kunterbunt_background_melody.mp3" type="audio/mpeg">
         </audio>
     </header>
