Content: Update modal with circus-themed copy and author recommendation

--- a/index.html
+++ b/index.html
@@ -24,20 +24,19 @@
     <!-- Audio Consent Modal -->
     <div id="audio-consent-modal" class="audio-consent-overlay">
         <div class="audio-consent-modal">
-            <h1 class="consent-headline">Tag der offenen Tür in der Villa Kunterbunt</h1>
+            <h1 class="consent-headline">🎪 Tag der offenen Tür in der Villa Kunterbunt 🎪</h1>
             <p class="consent-body">
-                Willkommen im Zentrum der kontrollierten Eskalation. Sie betreten das digitale Abbild einer Firma, die
-                herkömmliche Strukturen als optional betrachtet. Hier wird nicht gearbeitet, hier wird auditive Realität
-                dekonstruiert. Das vorliegende eBook dokumentiert den Prozess, wie aus einer Vision eine funktionale
-                Anstalt für akustische Höchstleistung wurde.
+                Willkommen in der systemischen Kernschmelze. Sie betreten die teuerste Anstalt der Branche, in der
+                Wahnsinn chirurgisch präzise verwaltet wird. Dieses eBook ist Ihre Einweisungsurkunde in eine Welt, in
+                der das Chaos die Projektleitung übernommen hat.
             </p>
             <p class="consent-warning">
-                <strong>⚠️ Dringende System-Empfehlung:</strong><br>
-                Um die maximale Customer Experience zu gewährleisten und die volle Rendite der Anlage zu extrahieren,
-                empfiehlt die Leitung inständig die Aktivierung des Vollbild- und Audio-Modus.
+                <strong>🥳 Freundliche Empfehlung des Authors</strong><br>
+                Hören Sie auf die Stimmen: Um diesen Wahnsinn physisch zu fühlen, ist der vollimmersive Modus die
+                Sahnehaube. Vollbild an, Realität aus – lassen Sie die Villa ungefiltert wirken.
             </p>
             <p class="consent-cta">
-                <strong>Gönn dir die Immersion. Die Behandlung hat bereits begonnen.</strong>
+                <strong>Gönn dir das Eintauchen. Die Manege ist bereit. 🎪</strong>
             </p>
             <div class="consent-buttons">
                 <button id="consent-yes" class="consent-btn consent-primary">
