--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Audio Consent Modal -->
     <div id="audio-consent-modal" class="audio-consent-overlay">
         <div class="audio-consent-modal">
-            <h1 class="consent-headline">🎪 Tag der offenen Tür in der Villa Kunterbunt 🎪</h1>
+            <h1 class="consent-headline">Willkommen in der Villa Kunterbunt</h1>
             <p class="consent-body">
                 Willkommen in der systemischen Kernschmelze. Sie betreten die teuerste Anstalt der Branche, in der
                 Wahnsinn chirurgisch präzise verwaltet wird. Dieses eBook ist Ihre Einweisungsurkunde in eine Welt, in
@@ -35,9 +35,7 @@
                 Hören Sie auf die Stimmen: Um diesen Wahnsinn physisch zu fühlen, ist der vollimmersive Modus die
                 Sahnehaube. Vollbild an, Realität aus – lassen Sie die Villa ungefiltert wirken.
             </p>
-            <p class="consent-cta">
-                <strong>Gönn dir das Eintauchen. Die Manege ist bereit. 🎪</strong>
-            </p>
+
             <div class="consent-buttons">
                 <button id="consent-yes" class="consent-btn consent-primary">
                     🔊 Jaaa unbedingt
