--- a/index.html
+++ b/index.html
@@ -509,18 +509,15 @@
             createConfetti();
             animateConfetti();
 
-            // Cover Image Toggle
+            // Cover Image Toggle on Hover
             const coverImage = document.getElementById('cover-image');
             if (coverImage) {
-                coverImage.addEventListener('click', () => {
-                    const currentSide = coverImage.dataset.showing;
-                    if (currentSide === 'front') {
-                        coverImage.src = coverImage.dataset.back;
-                        coverImage.dataset.showing = 'back';
-                    } else {
-                        coverImage.src = coverImage.dataset.front;
-                        coverImage.dataset.showing = 'front';
-                    }
+                coverImage.addEventListener('mouseover', () => {
+                    coverImage.src = coverImage.dataset.back;
+                });
+
+                coverImage.addEventListener('mouseout', () => {
+                    coverImage.src = coverImage.dataset.front;
                 });
             }
 
