Content: Shorten modal text by removing 'Einweisungsurkunde' sentence

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
             <p class="consent-body">
                 Willkommen in der <strong>systemischen Kernschmelze</strong>. Sie betreten die <strong>teuerste Anstalt
                     der Branche</strong>, in der
-                Wahnsinn <strong>chirurgisch präzise</strong> verwaltet wird. Dieses eBook ist Ihre
-                <strong>Einweisungsurkunde</strong> in eine Welt, in
-                der das <strong>Chaos die Projektleitung</strong> übernommen hat.
+                Wahnsinn <strong>chirurgisch präzise</strong> verwaltet wird.
             </p>
             <p class="consent-warning">
                 <strong>❤️ Freundliche Empfehlung des Authors</strong><br>
