Fix: Gallery/Podcast back links, podcast audio paths, and mobile confetti widget

--- a/core/data/main/gallery/index.html
+++ b/core/data/main/gallery/index.html
@@ -346,8 +346,7 @@
         <div class="gallery" id="gallery"></div>
 
         <div style="text-align: center;">
-            <a href="https://github.com/derlemue/villa-kunterbunt/tree/main?tab=readme-ov-file#-memes--illustrationen"
-                class="back-link">← Zurück zum Hauptmenü</a>
+            <a href="../../../../../index.html" class="back-link">← Zurück zum Hauptmenü</a>
         </div>
     </div>
 
