--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -381,8 +381,8 @@
 
             <!-- Episode 1 -->
             <article class="episode-card fade-in-up delay-1">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png"
-                    alt="Cover Art" class="cover-art">
+                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
+                    class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 01</div>
                     <h2 class="episode-title">Die Satire</h2>
@@ -408,8 +408,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-1" src="../assets/audio/villa_kunterbunt_satire.mp3"
-                        preload="metadata"></audio>
+                    <audio id="audio-player-1" src="../audio/villa_kunterbunt_satire.mp3" preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
                     <a href="satire.html" class="action-link">Zur Folge</a>
@@ -418,8 +417,8 @@
 
             <!-- Episode 2 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png"
-                    alt="Cover Art" class="cover-art">
+                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
+                    class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 02</div>
                     <h2 class="episode-title">Die Analyse</h2>
@@ -444,7 +443,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-2" src="../assets/audio/villa_kunterbunt_analyse_podcast.mp3"
+                    <audio id="audio-player-2" src="../audio/villa_kunterbunt_analyse_podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -455,8 +454,8 @@
 
             <!-- Episode 3 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png"
-                    alt="Cover Art" class="cover-art">
+                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
+                    class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 03</div>
                     <h2 class="episode-title">Das Dossier</h2>
@@ -481,7 +480,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-3" src="../assets/audio/villa_kunterbunt_dossier_podcast.mp3"
+                    <audio id="audio-player-3" src="../audio/villa_kunterbunt_dossier_podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -491,8 +490,8 @@
 
             <!-- Episode 4 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png"
-                    alt="Cover Art" class="cover-art">
+                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
+                    class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 04</div>
                     <h2 class="episode-title">Der DeepDive</h2>
@@ -517,8 +516,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-4" src="../assets/audio/villa_kunterbunt_deepdive.mp3"
-                        preload="metadata"></audio>
+                    <audio id="audio-player-4" src="../audio/villa_kunterbunt_deepdive.mp3" preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
                     <a href="deepdive.html" class="action-link">Zur Folge</a>
@@ -527,8 +525,8 @@
 
             <!-- Episode 5 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png"
-                    alt="Cover Art" class="cover-art">
+                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
+                    class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 05</div>
                     <h2 class="episode-title">Der Zupftest</h2>
@@ -553,8 +551,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-5" src="../assets/audio/villa_kunterbunt_zupftest.mp3"
-                        preload="metadata"></audio>
+                    <audio id="audio-player-5" src="../audio/villa_kunterbunt_zupftest.mp3" preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
                     <a href="zupftest.html" class="action-link">Zur Folge</a>
@@ -563,8 +560,8 @@
 
             <!-- Episode 6 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png"
-                    alt="Cover Art" class="cover-art">
+                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
+                    class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 06</div>
                     <h2 class="episode-title">Die Studie</h2>
@@ -589,7 +586,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-6" src="../assets/audio/villa_kunterbunt_die_studie.mp3"
+                    <audio id="audio-player-6" src="../audio/villa_kunterbunt_die_studie.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -600,13 +597,13 @@
         </div>
 
         <footer>
-            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README.md"
+            <a href="../../../../../index.html"
                 style="display:inline-flex; align-items:center; gap:8px; color:var(--text-muted); text-decoration:none; padding:10px 20px; border:1px solid var(--glass-border); border-radius:30px; transition:all 0.2s ease; background:rgba(255,255,255,0.05);">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                     <path
                         d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
                 </svg>
-                <span>Projekt auf GitHub</span>
+                <span>← Zurück zur Startseite</span>
             </a>
         </footer>
     </div>
