--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -375,6 +375,15 @@
         <header>
             <h1>Die Villa Kunterbunt</h1>
             <div class="subtitle">Das Korrespondenz Epos</div>
+
+            <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
+                <a href="../../kompendium/podcast/index.html" class="action-link"
+                    style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🎙️ Zum
+                    Kompendium</a>
+                <a href="../../cowork/podcast/index.html" class="action-link"
+                    style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🎧 Zur Cowork
+                    Edition</a>
+            </div>
         </header>
 
         <div class="episode-list">
