Content: Refine Podcast labeling to 'Meta Podcast' and 'Cowork Podcast'

--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -379,10 +379,10 @@
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../kompendium/podcast/index.html" class="action-link"
                     style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🎙️ Zum
-                    Kompendium</a>
+                    Meta Podcast</a>
                 <a href="../../cowork/podcast/index.html" class="action-link"
-                    style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🎧 Zur Cowork
-                    Edition</a>
+                    style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🎧 Zum Cowork
+                    Podcast</a>
             </div>
         </header>
 
@@ -639,7 +639,7 @@
         </div>
 
         <footer>
-            <a href="../../../../../index.html"
+            <a href="https://derlemue.github.io/villa-kunterbunt/"
                 style="display:inline-flex; align-items:center; gap:8px; color:var(--text-muted); text-decoration:none; padding:10px 20px; border:1px solid var(--glass-border); border-radius:30px; transition:all 0.2s ease; background:rgba(255,255,255,0.05);">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                     <path
