--- a/core/data/kompendium/podcast/index.html
+++ b/core/data/kompendium/podcast/index.html
@@ -294,10 +294,11 @@
                 <img src="../../../website/data/main/images/abook_cover_front_thumb.png" alt="Cover Art"
                     class="cover-art">
                 <div class="episode-content">
-                    <div class="episode-tag">Episode 01</div>
+                    <div class="episode-tag">Meta Podcast</div>
                     <h2 class="episode-title">Korrespondenz System Analyse</h2>
                     <div class="episode-description">
-                        Der Meta-Podcast zur Villa Kunterbunt. Eine tiefergehende Systemanalyse der Korrespondenz.
+                        Der <strong>Meta-Podcast</strong> zur Villa Kunterbunt. Eine tiefergehende Systemanalyse der
+                        Korrespondenz.
                     </div>
                     <div class="player-controls">
                         <button class="play-btn" onclick="togglePlay(1)" id="play-btn-1" aria-label="Play Episode 1">
@@ -322,7 +323,7 @@
         </div>
 
         <footer>
-            <a href="../../../../../index.html"
+            <a href="https://derlemue.github.io/villa-kunterbunt/"
                 style="display:inline-flex; align-items:center; gap:8px; color:var(--text-muted); text-decoration:none; padding:10px 20px; border:1px solid var(--glass-border); border-radius:30px; transition:all 0.2s ease; background:rgba(255,255,255,0.05);">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                     <path
