Fix: Add missing MP3 files, update gallery links, and refresh website preview

--- a/core/data/main/gallery/index.html
+++ b/core/data/main/gallery/index.html
@@ -346,7 +346,7 @@
         <div class="gallery" id="gallery"></div>
 
         <div style="text-align: center;">
-            <a href="../../../../../index.html" class="back-link">← Zurück zum Hauptmenü</a>
+            <a href="https://derlemue.github.io/villa-kunterbunt/" class="back-link">← Zurück zum Hauptmenü</a>
         </div>
     </div>
 
