Refactor: Move podcast audio files to project-specific audio folders

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -315,7 +315,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-1" src="../../main/audio/villa_kunterbunt_episode_vi_abook.mp3"
+                    <audio id="audio-player-1" src="../audio/villa_kunterbunt_episode_vi_abook.mp3"
                         preload="metadata"></audio>
                 </div>
             </article>
