--- a/core/data/kompendium/podcast/index.html
+++ b/core/data/kompendium/podcast/index.html
@@ -316,7 +316,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-1" src="../../main/audio/villa_kunterbunt_korrespondenz_system_analyse.mp3"
+                    <audio id="audio-player-1" src="../audio/villa_kunterbunt_korrespondenz_system_analyse.mp3"
                         preload="metadata"></audio>
                 </div>
             </article>
